--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "gatsby-netlify-cms-test",
+  "description": "Practice Netlify CMS and Gatsby Site",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Liam Dawson",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/liamrdawson/gatsby-netlify-cms-test"
+  },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "bulma": "^0.8.0",
+    "codemirror": "^5.52.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
@@ -13,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -29,6 +36,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "redux": "^3.7.2",
+    "styled-components": "^5.0.1",
+    "typescript": "^3.8.2",
     "uuid": "^3.2.1"
   },
   "keywords": [
